# scloudplus

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: doc.zh.md
include/: aes.h  ds_benchmark.h  hash.h  kem.h  random.h
src/: Makefile  aes.c  aes.h  aes_ni.c  config.h  ds_benchmark.h  encode.c  encode.h  fips202.c  hash.c  kem.c  matrix.c  matrix.h  param.h  pke.c  pke.h  random.c  sample.c  sample.h  test.c  util.c  util.h
test/: test.c
